--- a/wedding-invitation/index.html
+++ b/wedding-invitation/index.html
@@ -16,7 +16,7 @@
       .then(data => {
         const guestName = data[guestId];
         document.getElementById('greeting').textContent = guestName
-          ? `Hey, ${guestName}! bro nich hav c ka`
+          ? `Hey, ${guestName}! bro nich hav c ka. Mor c ka pg`
           : `Ot Khernh Chhmous`;
       })
       .catch(err => {
